dropshot/tests/fail/bad_trait_endpoint1.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, impl HttpResponseError>
 --> tests/fail/bad_trait_endpoint1.rs:9:7
  |
9 | trait MyApi {
  |       ^^^^^

error: endpoint `bad_endpoint` must have at least one RequestContext argument
  --> tests/fail/bad_trait_endpoint1.rs:16:26
   |
16 |     async fn bad_endpoint() -> Result<HttpResponseUpdatedNoContent, HttpError>;
   |                          ^^
